tests/fixtures/invalid/none_bitand_dict.py
# Cannot bitwise AND None and Dict[str, int]
x: None = None & {"a": 1}
